# tv-tracker

./: .gitignore  .prettierignore  .prettierrc.mjs  Cargo.toml  DATEPICKER_FIXES.md  README.md  eslint.config.js  justfile  package.json  pnpm-lock.yaml  rust-toolchain.toml
.cargo/: config.toml
apps/desktop/: package-lock.json  package.json
apps/desktop/src/: App.vue  main.ts
apps/desktop/src/assets/css/: colors.css  global.css
apps/desktop/src/components/: DatePicker.vue  LazyImage.vue  MarkdownEditor.vue  NotesSection.vue  RatingPopup.vue  RatingTest.vue  StarRating.vue  TabBar.vue  ToastContainer.vue
apps/desktop/src/components/popular/: MovieGrid.vue  TvShowGrid.vue
apps/desktop/src/components/watchlist/: WatchlistMovieGrid.vue  WatchlistTvShowGrid.vue
apps/desktop/src/composables/: useLazyImage.ts  useToast.ts  useVirtualScroll.ts
apps/desktop/src/router/: index.ts
apps/desktop/src/services/: tmdbService.ts
apps/desktop/src/stores/: ratingStore.ts  watchlistStore.ts
apps/desktop/src/utils/: dateUtils.ts
apps/desktop/src/views/: HomePage.vue  MovieDetailsPage.vue  PopularPage.vue  TvShowDetailsPage.vue  WatchedPage.vue  WatchlistPage.vue
crates/logic/src/: lib.rs
crates/logic/src/api/: mod.rs  tmdb.rs
crates/logic/src/config/: mod.rs  toml_parser.rs
crates/logic/src/config/api/: mod.rs  tmdb_table.rs
crates/logic/src/database/: db_connection.rs  entities.rs  mod.rs
crates/markdown-renderer/: Cargo.toml  README.md
crates/markdown-renderer/benches/: markdown_benchmarks.rs
crates/markdown-renderer/examples/: html_rendering.rs  parse_markdown.rs
crates/markdown-renderer/src/: error.rs  lib.rs
crates/markdown-renderer/src/lexer/: lexer.rs  mod.rs  tokens.rs
crates/markdown-renderer/src/parser/: ast.rs  mod.rs  parser.rs
crates/markdown-renderer/src/renderer/: html.rs  mod.rs
crates/markdown-renderer/tests/: edge_cases.rs  html_features.rs  integration_tests.rs
crates/tauri/: Cargo.toml  tauri.conf.json
crates/tauri/src/: commands.rs  lib.rs
gui/: package-lock.json  package.json
gui/src/: App.vue  main.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs
gui/src/assets/css/: colors.css  global.css
gui/src/components/: MovieGrid.vue  TabBar.vue  TvShowGrid.vue
gui/src/components/popular/: MovieGrid.vue  TvShowGrid.vue
gui/src/components/watchlist/: WatchlistGrid.vue  WatchlistMovieGrid.vue  WatchlistTvShowGrid.vue
gui/src/router/: index.ts
gui/src/services/: tmdbService.ts
gui/src/views/: HomePage.vue  MovieDetailsPage.vue  WatchlistPage.vue
logic/: Cargo.toml
logic/src/: lib.rs
logic/src/api/: mod.rs  tmdb.rs
logic/src/config/: dir.rs  mod.rs  toml_parser.rs
logic/src/config/api/: mod.rs  tmdb_table.rs  write_config.rs
logic/src/database/: db_connection.rs  entities.rs  mod.rs
