[workspace]
resolver = "2"
members = [
  "gui/src-tauri",
  "logic"
]

[workspace.package]
authors = ["Pazl"]
edition = "2021"

[workspace.dependencies]
logic = { path = "./logic" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
