[workspace]
resolver = "2"
members = [
  "gui/src-tauri",
  "logic"
]

[workspace.package]
authors = ["Pazl"]
edition = "2021"
version = "0.1.0"
description = "TV show tracker"

[workspace.dependencies]
logic = { path = "./logic" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.96"
dirs = "6.0"
toml = "0.8.20"

