[workspace]
resolver = "2"
members = [
  "crates/tauri",
  "crates/logic",
  "crates/markdown-renderer"
]

[workspace.package]
authors = ["Pazl"]
edition = "2021"
version = "0.1.0"
description = "TV show and movie tracker"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Pazl27/tv-tracker"
keywords = ["tv", "tracker", "movies", "shows", "management"]
categories = ["tauri", "productivity", "applications"]
rust-version = "1.86.0-nightly"

[workspace.dependencies]
logic = { path = "./crates/logic" }
markdown-renderer = { path = "./crates/markdown-renderer", features = ["html"] }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.96"
thiserror = "2.0.16"
dirs = "6.0"
toml = "0.8.20"
reqwest = "0.12.12"
tokio = { version = "1.43", features = ["full"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
