[package]
name = "logic"
authors.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
dirs.workspace = true
toml.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros"] }
tokio-macros = "1.8.0"
